--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 <body style="background-color: gray;">
     <canvas id="canvas" width="600" height="650" style="background-color: white;"></canvas>
     <script src=js/game.js></script>
-    <script src="js/LevelManager.js"></script>
+
     <script src="js/sprites/restart.js"></script>
     <script src="js/sprites/Plane.js"></script>
     <script src="js/sprites/Bullet.js"></script>
     <script src="js/sprites/asteroid.js"></script>
     <script src="js/sprites/asteroidExplosion.js"></script>
+
+    <script src="js/sprites/Money.js"></script>
+    <script src="js/sprites/MoneyTracker.js"></script>
     <script src="js/sprites/Enemy.js"></script>
     <script src="js/sprites/EnemySpawner.js"></script>
     <script src="js/sprites/Explosion.js"></script>
@@ -25,8 +28,11 @@
     <script src="js/sprites/Background.js"></script>
     <script src="js/sprites/BossAlien.js"></script>
     <script src="js/sprites/BossBullet.js"></script>
+    <script src="js/sprites/Timer.js"></script>
+    <script src="js/levelManager.js"></script>
 
     <script src="js/menu.js"></script>
+    <script src="js/IntroLevel2.js"></script>
     <script src="js/index.js"></script>
 </body>
 
