--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>CSIS250 GameEngine</title>
+    <title>SpaceShooter</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
     <script src="js/sprites/Bullet.js"></script>
     <script src="js/sprites/asteroid.js"></script>
     <script src="js/sprites/asteroidExplosion.js"></script>
-
+    <script src="js/sprites/FinalBoss.js"></script>
     <script src="js/sprites/Money.js"></script>
     <script src="js/sprites/MoneyTracker.js"></script>
     <script src="js/sprites/Enemy.js"></script>
@@ -25,6 +25,7 @@
     <script src="js/sprites/Explosion.js"></script>
     <script src="js/sprites/Score.js"></script>
     <script src="js/sprites/PowerUp.js"></script>
+
     <script src="js/sprites/Background.js"></script>
     <script src="js/sprites/BossAlien.js"></script>
     <script src="js/sprites/BossBullet.js"></script>
