--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body style="background-color: gray;">
-    <canvas id="canvas" width="600" height="650" style="background-color: white;"></canvas>
+    <canvas id="canvas" width="1270" height="630" style="background-color: white;"></canvas>
     <script src=js/game.js></script>
 
-    <script src="js/sprites/restart.js"></script>
+    <script src="js/sprites/GameOver.js"></script>
     <script src="js/sprites/Plane.js"></script>
     <script src="js/sprites/Bullet.js"></script>
     <script src="js/sprites/asteroid.js"></script>
