--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <script src="js/sprites/EnemySpawner.js"></script>
     <script src="js/sprites/Explosion.js"></script>
     <script src="js/sprites/Score.js"></script>
+    <script src="js/sprites/shield.js"></script>
     <script src="js/sprites/PowerUp.js"></script>
+
 
     <script src="js/sprites/Background.js"></script>
     <script src="js/sprites/BossAlien.js"></script>
